[gd_scene load_steps=5 format=3 uid="uid://yhdfj874t1uo"]

[ext_resource type="Script" path="res://Scripts/Blaster.gd" id="1_i3rwi"]
[ext_resource type="ArrayMesh" uid="uid://dlj777jmfwgo8" path="res://Models/weapon_blaster.obj" id="2_0js4s"]

[sub_resource type="BoxShape3D" id="BoxShape3D_wjjfx"]
size = Vector3(1, 0.109497, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_h1or8"]
radius = 3.5

[node name="Blaster" type="StaticBody3D"]
script = ExtResource("1_i3rwi")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)
mesh = ExtResource("2_0js4s")

[node name="Aim1" type="Marker3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0883482, 0.323399, 0.373677)

[node name="Aim2" type="Marker3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0890263, 0.323399, 0.373677)

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.0493774, 0)
shape = SubResource("BoxShape3D_wjjfx")

[node name="MobDetector" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MobDetector"]
shape = SubResource("SphereShape3D_h1or8")

[node name="BulletContainer" type="Node" parent="."]

[node name="ShootingCooldown" type="Timer" parent="."]
wait_time = 0.5

[connection signal="body_entered" from="MobDetector" to="." method="_on_mob_detector_body_entered"]
[connection signal="body_exited" from="MobDetector" to="." method="_on_mob_detector_body_exited"]
[connection signal="timeout" from="ShootingCooldown" to="." method="_on_shooting_cooldown_timeout"]
